<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewAlloy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/material_alloy"
            android:textColor="@color/primaryTextColor"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewAlloyTHK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/material_thk"
            android:textColor="@color/primaryTextColor"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewAlloyRadius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/inside_radius"
            android:textColor="@color/primaryTextColor"
            android:textStyle="bold" />
    </RelativeLayout>
</RelativeLayout>