<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TableLayout
        android:id="@+id/TableLayoutHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*">

        <TableRow
            android:id="@+id/tableRowHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/material_thk"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/primaryTextColor"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radius"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/primaryTextColor"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/angle"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/primaryTextColor"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deduction"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/primaryTextColor"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/half_deduction"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/primaryTextColor"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/textViewMT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_.040"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewRadius"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_.125"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewAngle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_90"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewBD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_1.5"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewHalfBD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_.75"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TableLayoutHeader"
        android:stretchColumns="*">

        <TableRow>

            <TextView
                android:id="@+id/textViewDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/textViewDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/hint_01_10_2016"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>
    </TableLayout>
</RelativeLayout>