<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/viewContentMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:id="@+id/containerMainEntryList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible">

        <TextView
            android:id="@+id/textViewSpinnerLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/order_by"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_toEndOf="@+id/textViewSpinnerLabel"
            android:layout_toRightOf="@+id/textViewSpinnerLabel" />

        <View
            android:id="@+id/viewLineSeparator"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@+id/spinner"
            android:background="@android:color/black" />

        <ListView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/viewLineSeparator"
            android:layout_marginTop="2dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/delete_list_item"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="italic" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/containerBigSMMLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50dp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/mainSMMLogo"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:src="@drawable/smm_1000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/mainSMMLogo"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/main_get_to_work" />
    </RelativeLayout>
</RelativeLayout>
